--- a/Ansible/roles/docker_engine_swarm/tasks/docker-debian.yml
+++ b/Ansible/roles/docker_engine_swarm/tasks/docker-debian.yml
@@ -48,6 +48,9 @@
       groups: docker
       append: yes
 
+- name: Create docker volume for filebeat
+  command: docker volume create --name filebeatdata
+
 - name: Leave swarm for a node
   docker_swarm:
       state: absent
