Adding volume for filebeat

--- a/Ansible/roles/docker_engine_swarm/tasks/docker-debian.yml
+++ b/Ansible/roles/docker_engine_swarm/tasks/docker-debian.yml
@@ -47,6 +47,9 @@
       name: buildserver
       groups: docker
       append: yes
+      
+- name: Create docker volume for filebeat
+  command: docker volume create --name filebeatdata
 
 - name: Leave swarm for a node
   docker_swarm:
