--- a/Ansible/roles/filebeat-db/tasks/main.yaml
+++ b/Ansible/roles/filebeat-db/tasks/main.yaml
@@ -11,7 +11,7 @@
        networks:
           - name: shop-socks
        volumes:
-          - filebeat_config.yml:/usr/share/filebeat/filebeat.yml:ro
+          - config/filebeat_db_conf.yml:/usr/share/filebeat/filebeat.yml:ro
           - /var/lib/docker/containers/:/var/lib/docker/containers/:ro
           - /var/run/docker.sock:/var/run/docker.sock:ro
           - /var/log/:/var/log/:ro
