--- a/Ansible/roles/filebeat-pd/tasks/main.yaml
+++ b/Ansible/roles/filebeat-pd/tasks/main.yaml
@@ -9,7 +9,7 @@
        restart_policy: unless-stopped
        recreate: yes
        volumes:
-          - filebeat_config.yml:/usr/share/filebeat/filebeat.yml:ro
+          - config/filebeat_pd_conf.yml:/usr/share/filebeat/filebeat.yml:ro
           - /var/lib/docker/containers/:/var/lib/docker/containers/:ro
           - /var/run/docker.sock:/var/run/docker.sock:ro
           - /var/log/:/var/log/:ro
