--- a/Ansible/configs/nginx.conf
+++ b/Ansible/configs/nginx.conf
@@ -1,20 +1,11 @@
-events {
-  worker_connections  1024;
-  }
+#events {
+#  worker_connections  1024;
+#  }
   
 http {
-    server {
-       listen 9200;
-        
-       location / {
-         proxy_pass      http://elasticsearch:9200/;
-         auth_basic "Elasticsearch";
-         auth_basic_user_file /etc/nginx/.htpasswd;
-                  }
-            }
                                     
      server {
-       listen 5601;
+       listen *:80;
                                           
        location / {
          proxy_pass      http://kibana:5601/;
@@ -23,3 +14,4 @@ http {
                    }
             }
     }
+    
