--- a/Ansible/roles/elasticsearch-db/tasks/main.yaml
+++ b/Ansible/roles/elasticsearch-db/tasks/main.yaml
@@ -14,7 +14,7 @@
           - 9200:9200
           - 9300:9300
        volumes:
-          - EFK/Ansible/configs/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+          - elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
           - elasticdata:/usr/share/elasticsearch/data
 - name: Clean up Docker unused images
   docker_prune:
