--- a/Ansible/roles/elasticsearch-db/tasks/main.yaml
+++ b/Ansible/roles/elasticsearch-db/tasks/main.yaml
@@ -1,4 +1,14 @@
 ---
+- name: Ensures {{project_root}}/conf dir exists
+  file: 
+     path= ./volumes/elastic
+     state=directory
+     
+- name: Copy file
+  template:
+      src: EFK/Ansible/configs/elasticsearch.yml
+      dest: ./volume/elastic
+  
 - name: Create Elasticsearch container for EFK stack
   docker_container:
        name: elasticsearch
@@ -14,7 +24,7 @@
           - 9200:9200
           - 9300:9300
        volumes:
-          - elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+          - ./volume/elastic/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
           - elasticdata:/usr/share/elasticsearch/data
 - name: Clean up Docker unused images
   docker_prune:
