--- a/Ansible/roles/kibana_nginx-db/tasks/main.yaml
+++ b/Ansible/roles/kibana_nginx-db/tasks/main.yaml
@@ -3,12 +3,39 @@
     create: yes
     path: configs/.htpasswd
 #    path: /roles/kibana_nginx-db/tasks/.htpasswd
-    name: elk
+    name: efk
     password: '55555'
     owner: root
     group: nginx
     mode: 0640
     state: present
+
+- name: Ensures whether kibana dir exists
+  file:
+    path: ./volumes/kibana
+    state: directory
+
+- name: Ensures whether nginx dir exists
+  file:
+    path: ./volumes/nginx
+    state: directory
+                 
+- name: Copy nginx config file
+    template:
+        src: configs/nginx.conf
+        dest: ./volumes/nginx
+        
+- name: Copy htpassw config filecfor nginx
+    template:
+        src: configs/.htpasswd
+        dest: ./volumes/nginx
+        
+
+- name: Copy kibana config file
+    template:
+        src: configs/kibana.yml
+        dest: ./volumes/kibana
+
 
 - name: Create nginx container for EFK stack
   docker_container:
@@ -26,8 +53,8 @@
          volumes:
 #            - roles/kibana_nginx-db/tasks/nginx.conf:/etc/nginx/nginx.conf
 #            - roles/kibana_nginx-db/tasks/.htpasswd:/etc/nginx/.htpasswd
-            - configs/nginx.conf:/etc/nginx/nginx.conf
-            - configs/.htpasswd:/etc/nginx/.htpasswd
+            - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./volumes/.htpasswd:/etc/nginx/.htpasswd
             - nginxdata:/var/log/nginx 
             
 - name: Create kibana container for EFK stack
@@ -44,7 +71,7 @@
          published_ports: 
             - 5601:5601
          volumes:
-            - configs/kibana.yml:/usr/share/kibana/config/kibana.yml
+            - ./volumes/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
                                                                                                                                                                                                                                                           
 - name: Clean up Docker unused images
   docker_prune:
