Correcting yaml config for kibana

--- a/Ansible/roles/kibana_nginx-db/tasks/main.yaml
+++ b/Ansible/roles/kibana_nginx-db/tasks/main.yaml
@@ -76,5 +76,5 @@
 - name: Clean up Docker unused images
   docker_prune:
         images: yes
-        images_filters
+        images_filters:
                 dangling: true 
