Changing owner on kibana-nginx.yaml

--- a/Ansible/roles/kibana_nginx-db/tasks/main.yaml
+++ b/Ansible/roles/kibana_nginx-db/tasks/main.yaml
@@ -1,4 +1,9 @@
 ---
+- name: Ensures whether .htpasswd file exists
+  file:
+    path: configs/.htpasswd
+    state: touch
+
 - htpasswd:
     create: yes
     path: configs/.htpasswd
