Changing kibana-nginx playbook

--- a/Ansible/roles/kibana_nginx-db/tasks/main.yaml
+++ b/Ansible/roles/kibana_nginx-db/tasks/main.yaml
@@ -1,12 +1,7 @@
 ---
-- name: Ensures whether .htpasswd file exists
-  file:
-    path: configs/htpasswd
-    state: touch
-
 - htpasswd:
     create: yes
-    path: configs/htpasswd
+    path: volumes/nginx/.htpasswd
 #    path: /roles/kibana_nginx-db/tasks/.htpasswd
     name: efk
     password: '55555'
@@ -29,12 +24,7 @@
   template:
         src: configs/nginx.conf
         dest: ./volumes/nginx
-        
-- name: Copy htpassw config filecfor nginx
-  template:
-        src: configs/htpasswd
-        dest: ./volumes/nginx
-        
+                
 
 - name: Copy kibana config file
   template:
