--- a/Ansible/configs/elasticsearch.yml
+++ b/Ansible/configs/elasticsearch.yml
@@ -1,6 +1,6 @@
-cluster.name: my-efk
+#cluster.name: my-efk
 network.host: 0.0.0.0
 node.local: true
-index.number_of_shards: 1
-index.number_of_replicas: 0
+#index.number_of_shards: 1
+#index.number_of_replicas: 0
 discovery.type: single-node
