--- a/Ansible/roles/kibana_nginx-db/tasks/main.yaml
+++ b/Ansible/roles/kibana_nginx-db/tasks/main.yaml
@@ -65,7 +65,7 @@
 #            - roles/kibana_nginx-db/tasks/nginx.conf:/etc/nginx/nginx.conf
 #            - roles/kibana_nginx-db/tasks/.htpasswd:/etc/nginx/.htpasswd
             - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - ./volumes/.htpasswd:/etc/nginx/.htpasswd
+            - ./volumes/nginx/.htpasswd:/etc/nginx/.htpasswd
             - nginxdata:/var/log/nginx 
                                                                                                                                                                                                                                                                   
 - name: Clean up Docker unused images
