Correcting configuration filebeats.yml

--- a/Ansible/roles/filebeat-db/tasks/main.yaml
+++ b/Ansible/roles/filebeat-db/tasks/main.yaml
@@ -9,12 +9,13 @@
     name: filebeat
     state: present                                
 
-- name: Permission on volumes /var/log
+- name: Permission on volumes /var/log/messages
   file:
-    dest: /var/log
+    dest: /var/log/messages
 #    owner: filebeat
     group: filebeat
-    recurse: yes
+    mode: '0640'
+#    recurse: yes
     
 - name: Ensures whether dir exists
   file:
@@ -38,8 +39,9 @@
 - name: Permission on socker /var/run/docker.sock
   file:
     dest: /var/run/docker.sock
+    mode: '0644'
 #    owner: filebeat
-    group: filebeat
+#    group: filebeat
 #    recurse: yes
                  
 - name: Copy file
@@ -62,7 +64,7 @@
           - ./volumes/filebeat/db/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
           - /var/lib/docker/containers/:/var/lib/docker/containers/:ro
           - /var/run/docker.sock:/var/run/docker.sock:ro
-          - /var/log/:/var/log/:ro
+          - /var/log/messages:/var/log/messages:ro
           - filebeatdata:/usr/share/filebeat/data/                                                                                                          
      
 - name: Clean up Docker unused images
