--- a/Ansible/roles/filebeat-pd/tasks/main.yaml
+++ b/Ansible/roles/filebeat-pd/tasks/main.yaml
@@ -15,7 +15,7 @@
 #    owner: filebeat
     group: filebeat
     mode: '0640'
-    recurse: yes
+#    recurse: yes
                                       
 - name: Ensures whether dir exists
   file:
