--- a/Ansible/roles/filebeat-pd/tasks/main.yaml
+++ b/Ansible/roles/filebeat-pd/tasks/main.yaml
@@ -29,18 +29,18 @@
     group: filebeat
     recurse: yes
                                                               
-- name: Permission on volumes /var/lib/docker/containers
-  file:
-    dest: /var/lib/docker/containers
+#- name: Permission on volumes /var/lib/docker/containers
+#  file:
+#    dest: /var/lib/docker/containers
 #    owner: filebeat
 #    group: filebeat
-    mode: '0744'
-    recurse: yes
+#    mode: '0744'
+#    recurse: yes
                                                                             
-- name: Permission on socker /var/run/docker.sock
-  file:
-    dest: /var/run/docker.sock
-    mode: '0644'
+#- name: Permission on socker /var/run/docker.sock
+#  file:
+#    dest: /var/run/docker.sock
+#    mode: '0644'
 #    owner: filebeat
 #    group: filebeat
 #    recurse: yes
