--- a/Ansible/roles/filebeat-pd/tasks/main.yaml
+++ b/Ansible/roles/filebeat-pd/tasks/main.yaml
@@ -52,10 +52,12 @@
 
 - name: Create filebeat container for EFK stack
   docker_container:
+       become: true
        name: filebeat
        image: docker.elastic.co/beats/filebeat:7.4.2 
        state: started
        pull: true
+       user: root
        restart: yes
        restart_policy: unless-stopped
        recreate: yes
