--- a/Ansible/roles/filebeat-db/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-db/tasks/filebeat.yml
@@ -8,7 +8,9 @@ filebeat.inputs:
   paths: 
         - '/var/lib/docker/containers/*/*.log'
 
-
+processors:
+  - add_docker_metadata:
+        host: "unix:///var/run/docker.sock"
   
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
