--- a/Ansible/roles/filebeat-pd/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-pd/tasks/filebeat.yml
@@ -8,9 +8,9 @@ filebeat.inputs:
   paths: 
         - '/var/lib/docker/containers/*/*.log'
 
-  processors:
-  - add_docker_metadata: ~
-#        host: "unix:///var/run/docker.sock"
+processors:
+- add_docker_metadata: 
+        host: "unix:///var/run/docker.sock"
   
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
