--- a/Ansible/roles/filebeat-pd/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-pd/tasks/filebeat.yml
@@ -23,4 +23,15 @@ output.elasticsearch:
 
 
 logging.json: true
-logging.metrics.enabled: false          
+logging.metrics.enabled: false
+
+logging.level: info
+logging.to_files: false
+logging.to_syslog: false
+loggins.metrice.enabled: false
+logging.files:
+  path: /var/log/filebeat
+  name: filebeat
+  keepfiles: 7
+  permissions: 0644
+ssl.verification_mode: none          
