--- a/Ansible/configs/filebeat_db_conf.yml
+++ b/Ansible/configs/filebeat_db_conf.yml
@@ -5,6 +5,9 @@ filebeat.inputs:
 #      - /var/log/auth.log
 
 - type: container
+  multiline.pattern: "^[[:space:]]+(at|\\.{3})\\b|^Caused by:"
+  multiline.negate: false
+  multiline.match: after
   paths: 
         - '/var/lib/docker/containers/*/*.log'
 
@@ -19,7 +22,18 @@ processors:
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
     indices:
-        - index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
-    
+        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
+
 logging.json: true
-logging.metrics.enabled: false      
+logging.metrics.enabled: false 
+
+logging.level: info
+logging.to_files: false
+logging.to_syslog: false
+loggins.metrice.enabled: false
+logging.files:
+  path: /var/log/filebeat
+  name: filebeat
+  keepfiles: 7
+  permissions: 0644
+ssl.verification_mode: none     
