--- a/Ansible/roles/filebeat-db/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-db/tasks/filebeat.yml
@@ -5,6 +5,9 @@ filebeat.inputs:
 #      - /var/log/auth.log
 
 - type: container
+  multiline.pattern: "^[[:space:]]+(at|\\.{3})\\b|^Caused by:"
+  multiline.negate: false
+  multiline.match: after
   paths: 
         - '/var/lib/docker/containers/*/*.log'
 
@@ -19,10 +22,10 @@ processors:
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
     indices:
-        - index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
-    
+        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
+
 logging.json: true
-logging.metrics.enabled: false
+logging.metrics.enabled: false 
 
 logging.level: info
 logging.to_files: false
@@ -33,4 +36,4 @@ logging.files:
   name: filebeat
   keepfiles: 7
   permissions: 0644
-ssl.verification_mode: none      
+ssl.verification_mode: none     
