--- a/Ansible/configs/filebeat_pd_conf.yml
+++ b/Ansible/configs/filebeat_pd_conf.yml
@@ -22,7 +22,7 @@ processors:
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
     indices:
-        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
+        - index: "filebeat-%{docker.container.name}-%{+yyyy.MM.dd}"
 
 logging.json: true
 logging.metrics.enabled: false
