--- a/Ansible/roles/filebeat-db/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-db/tasks/filebeat.yml
@@ -22,7 +22,8 @@ processors:
 output.elasticsearch:
     hosts: ["elasticsearch:9200"]
     indices:
-        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
+#        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
+        - index: "filebeat-%{container.name}-%{+yyyy.MM.dd}"
 
 logging.json: true
 logging.metrics.enabled: false 
