--- a/Ansible/roles/filebeat-db/tasks/filebeat.yml
+++ b/Ansible/roles/filebeat-db/tasks/filebeat.yml
@@ -23,8 +23,10 @@ output.elasticsearch:
     hosts: ["elasticsearch:9200"]
     indices:
 #        - index: "filebeat-%{[docker][container][name]}-%{+yyyy.MM.dd}"
-        - index: "filebeat-%{container.name}-%{+yyyy.MM.dd}"
-
+        - index: "filebeat-%{[container.name]}-%{+yyyy.MM.dd}"
+setup.template:
+  name:  "%{[container.name]}"
+  pattern: "%{[container.name]}-*"
 logging.json: true
 logging.metrics.enabled: false 
 
